Updated config.